# get_lang

./: CMakeLists.txt  HowTo  Language_Recognition.cbp  Language_Recognition.depend  Language_Recognition.layout  README.md  charset.txt  evaluation.txt  example1.txt  example2.txt  example3.txt  ignore.txt  main.cpp  nla.txt  split.cpp  split.h  unidentified.txt  wordbooks.cpp  wordbooks.h
src/: wordbooks.cpp  wordbooks.h
util/: charset.txt  conversion.txt  ignore.txt  unidentified.txt
wordbooks/: afr.txt  swe.txt  w1-esp.txt  w1-fre.txt  w1-ger.txt
